[gd_scene load_steps=3 format=3 uid="uid://nbgmvc2e0hkg"]

[ext_resource type="Script" path="res://Scripts/tag_template_creator.gd" id="1_o6obg"]
[ext_resource type="PackedScene" uid="uid://ddwpdjjwbxnyr" path="res://Scenes/tag_template_loader.tscn" id="2_pkjsk"]

[node name="TagTemplateCreator" type="Control"]
layout_mode = 3
anchor_right = 0.6
anchor_bottom = 0.8
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o6obg")
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.211765, 0.239216, 0.290196, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="Name" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="VBoxContainer/Name"]
layout_mode = 2
text = "Template Name:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/Name"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
placeholder_text = "Template Name"

[node name="Button" type="Button" parent="VBoxContainer/Name"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
text = "Load Template"

[node name="OpenFolderButton" type="Button" parent="VBoxContainer/Name"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
text = "Open Folder"

[node name="ListContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 16

[node name="TagsContainer" type="VBoxContainer" parent="VBoxContainer/ListContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ItemList" type="ItemList" parent="VBoxContainer/ListContainer/TagsContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Menus" type="HBoxContainer" parent="VBoxContainer/ListContainer/TagsContainer"]
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/ListContainer/TagsContainer/Menus"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Enter tags for template"

[node name="Button" type="Button" parent="VBoxContainer/ListContainer/TagsContainer/Menus"]
layout_mode = 2
text = "Clear"

[node name="SuggestionsContainer" type="VBoxContainer" parent="VBoxContainer/ListContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ItemList" type="ItemList" parent="VBoxContainer/ListContainer/SuggestionsContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Menus" type="HBoxContainer" parent="VBoxContainer/ListContainer/SuggestionsContainer"]
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/ListContainer/SuggestionsContainer/Menus"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Enter suggestions for template"

[node name="Button" type="Button" parent="VBoxContainer/ListContainer/SuggestionsContainer/Menus"]
layout_mode = 2
text = "Clear"

[node name="Button" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
text = "Save"

[node name="TemplateLoader" parent="." instance=ExtResource("2_pkjsk")]
visible = false
layout_mode = 1
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
